--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pull_to_refresh: ^2.0.0
+  provider: ^6.0.2
+  http: ^0.13.4
+  flutter_secure_storage: ^5.0.2
+
+dependency_overrides:
+  pull_to_refresh:
+    git:
+      url: https://github.com/miquelbeltran/flutter_pulltorefresh
+      ref: master
 
 dev_dependencies:
   flutter_test:
